update web pgs, add requirements.txt, update basic flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,20 +24,20 @@
 		<!-- CSS
 		================================================== -->
 		<!-- Fontawesome Icon font -->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="/static/css/font-awesome.min.css">
 		<!-- Twitter Bootstrap css -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<!-- jquery.fancybox  -->
-        <link rel="stylesheet" href="css/jquery.fancybox.css">
+        <link rel="stylesheet" href="/static/css/jquery.fancybox.css">
 		<!-- animate -->
-        <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="/static/css/animate.css">
 		<!-- Main Stylesheet -->
-        <link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="/static/css/main.css">
 		<!-- media-queries -->
-        <link rel="stylesheet" href="css/media-queries.css">
+        <link rel="stylesheet" href="/static/css/media-queries.css">
 
 		<!-- Modernizer Script for old Browsers -->
-        <script src="js/modernizr-2.6.2.min.js"></script>
+        <script src="/static/js/modernizr-2.6.2.min.js"></script>
 
     </head>
 	
@@ -45,7 +45,7 @@
 	
 		<!-- preloader -->
 		<div id="preloader">
-			<img src="img/preloader.gif" alt="Preloader">
+			<img src="/static/img/preloader.gif" alt="Preloader">
 		</div>
 		<!-- end preloader -->
 
@@ -65,7 +65,7 @@
 					<!-- logo -->
                     <a class="navbar-brand" href="#body">
 						<h1 id="logo">
-							<img src="img/logo7.png" alt="banner2">
+							<img src="/static/img/logo7.png" alt="banner2">
 						</h1>
 					</a>
 					<!-- /logo -->
@@ -99,7 +99,7 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					
-					<div class="item active" style="background-image: url(img/banner.jpg);">
+					<div class="item active" style="background-image:url('/static/img/banner.jpg');">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Videogame<span> Recommender</span>!</h2>
 							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/find</span> your next game.</h3>				
@@ -188,8 +188,12 @@
         <!--
         Model Section
         ==================================== -->
-	<section id="model" class="model">	
+	<br></br>
+	<p>PLACEHOLDER IMAGE</p>
+		<section id="model" class="model">	
 	<p>Recommender Somewhere Here</p>
+	<img src="/static/img/viz1.png" alt="viz1" class="center-block">
+
 
 	
 		
@@ -259,36 +263,8 @@
 		<footer id="footer" class="footer">
             <div class="container">
                 <div class="row">
-                
-                    <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp animated" data-wow-duration="500ms">
-                        <div class="footer-single">
-                            <img src="img/footer-logo.png" alt="">
-                            <p></p>
-                        </div>
-                    </div>
-                
-                    <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
-                        <div class="footer-single">
-							<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp animated" data-wow-duration="500ms">
-								<div class="footer-single">
-									<img src="img/footer-logo.png" alt="">
-									<p></p>
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp animated" data-wow-duration="500ms">
-								<div class="footer-single">
-									<img src="img/footer-logo.png" alt="">
-									<p></p>
-								</div>
-							</div>
-                            
-                               
-                      
-                        
-                        </div>
-                    </div>
-                
-					<img src="img/GitHub-Mark-Light-64px.png" alt="">
+    
+					<img src="/static/img/GitHub-Mark-64px.png" alt="github">
 					<a class="btn btn-secondary btn-lg" href="https://github.com/michelleherman13/project-4" role="button">Project Repository</a>			
 
                         </div>
@@ -304,36 +280,32 @@
                 </div>
             </div>
         </footer>
-        
 		
-
 		<!-- Essential jQuery Plugins
 		================================================== -->
 		<!-- Main jQuery -->
-        <script src="js/jquery-1.11.1.min.js"></script>
+        <script src="/static/js/jquery-1.11.1.min.js"></script>
 		<!-- Single Page Nav -->
-        <script src="js/jquery.singlePageNav.min.js"></script>
+        <script src="/static/js/jquery.singlePageNav.min.js"></script>
 		<!-- Twitter Bootstrap -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="/static/js/bootstrap.min.js"></script>
 		<!-- jquery.fancybox.pack -->
-        <script src="js/jquery.fancybox.pack.js"></script>
+        <script src="/static/js/jquery.fancybox.pack.js"></script>
 		<!-- jquery.mixitup.min -->
-        <script src="js/jquery.mixitup.min.js"></script>
+        <script src="/static/js/jquery.mixitup.min.js"></script>
 		<!-- jquery.parallax -->
-        <script src="js/jquery.parallax-1.1.3.js"></script>
+        <script src="/static/js/jquery.parallax-1.1.3.js"></script>
 		<!-- jquery.countTo -->
-        <script src="js/jquery-countTo.js"></script>
+        <script src="/static/js/jquery-countTo.js"></script>
 		<!-- jquery.appear -->
-        <script src="js/jquery.appear.js"></script>
+        <script src="/static/js/jquery.appear.js"></script>
 		<!-- Contact form validation -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
-		<!-- Google Map -->
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"></script>
 		<!-- jquery easing -->
-        <script src="js/jquery.easing.min.js"></script>
+        <script src="/static/js/jquery.easing.min.js"></script>
 		<!-- jquery easing -->
-        <script src="js/wow.min.js"></script>
+        <script src="/static/js/wow.min.js"></script>
 		<script>
 			var wow = new WOW ({
 				boxClass:     'wow',      // animated element css class (default is wow)
@@ -346,9 +318,9 @@
 			wow.init();
 		</script> 
 		<!-- Custom Functions -->
-        <script src="js/custom.js"></script>
+        <script src="/static/js/custom.js"></script>
 		
-		<script type="text/javascript">
+		<script type="/static/text/javascript">
 			$(function(){
 				
 			});
