add initial user dropdowns to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -185,22 +185,89 @@
         ==================================== -->
 		
 		
+        	
         <!--
-        Model Section
+        Recommendor Section
         ==================================== -->
 	<br></br>
-	<p>PLACEHOLDER IMAGE</p>
-		<section id="model" class="model">	
-	<p>Recommender Somewhere Here</p>
-	<img src="/static/img/viz1.png" alt="viz1" class="center-block">
+	<section id="model" class="model">	
+<img src="/static/img/viz1.png" alt="viz1" class="center-block">
 
-
+	<br></br>
+	<div class="container">
+	<h1>Video Game Recommendor</h1>
+	<br></br>
+		<form class="form-horizontal" role="form">
+		  <div class="form-group">
 	
-		
-        <!--
-        End Model Section
-        ==================================== -->
-		
+		  <div class="form-group">
+			<label for="gender1" class="col-sm-4 control-label">Critic Score:</label>
+			<div class="col-sm-4">
+			<select class="form-control inputstl" id="gender1">
+			  <option>example</option>
+			  <option>example</option>
+			</select>          
+			  
+			</div>
+		  </div>      
+		  <div class="form-group">
+			<label for="gender1" class="col-sm-4 control-label">ESRB Rating:</label>
+			<div class="col-sm-4">
+			<select class="form-control inputstl" id="gender1">
+			  <option>example</option>
+			  <option>example</option>
+			</select>   
+		  </div>
+		  </div>
+		  <div class="form-group">
+			<label for="gender1" class="col-sm-4 control-label">Genre:</label>
+			<div class="col-sm-4">
+			<select class="form-control inputstl" id="gender1">
+			  <option>example</option>
+			  <option>example</option>
+			</select>   
+		  </div>
+		  </div>
+		  <div class="form-group">
+			<label for="gender1" class="col-sm-4 control-label">Platform:</label>
+			<div class="col-sm-4">
+			<select class="form-control inputstl" id="gender1">
+			  <option>example</option>
+			  <option>example</option>
+			</select>   
+		  </div>
+		  </div>   <div class="form-group">
+			<label for="gender1" class="col-sm-4 control-label">Publisher:</label>
+			<div class="col-sm-4">
+			<select class="form-control inputstl" id="gender1">
+			  <option>example</option>
+			  <option>example</option>
+			</select>   
+		  </div>
+		  </div>
+	   <div class="form-group">
+			  <label for="gender1" class="col-sm-4 control-label">Year:</label>
+			  <div class="col-sm-4">
+			  <select class="form-control inputstl" id="gender1">
+				<option>example</option>
+				<option>example</option>
+			  </select>   
+			  <br> </br>
+		  
+			</div>
+		  </div>  
+		  <div class="form-group">
+			<div class="col-sm-offset-2 col-sm-4">
+			  <button type="submit" class="btn btn-lg btn-block btn-dark">Get Recommendations</button>
+			</div>
+		  </div>
+		</form>
+	   </div> 
+	   <br> </br>
+	<!--
+	End Recommendor section
+	==================================== -->
+	
 
 		
 		<!--
