add tableau.html; edit index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,23 +71,31 @@
 					<!-- /logo -->
                 </div>
 
-				<!-- main nav -->
+				<!-- main page NAVIGATION -->
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
                         <li class="current"><a href="#body">home</a></li>
                         <li><a href="#background">background</a></li>
-                        <li><a href="#model"> model</a></li>
+
                     </ul>
-                </nav>
+					</nav>
+					
 				<!-- /main nav -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right">
+					  <li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">dashboard <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+						 <li><a href="tableau.html">dashboard</a></li>
+						 <li><a href="tableau.html">works cited</a></li>
+						 <li><a href="tableau.html">data</a></li>
+
+		
 				
-            </div>
         </header>
         <!--
         End Fixed Navigation
         ==================================== -->
-		
-		
 		
         <!--
         Home 
@@ -323,7 +331,7 @@
 				</div>
 			</div>
 		</section>
-		
+		<br></br>
         <!--
         End Video Game Stats
         ==================================== -->
@@ -336,7 +344,6 @@
 
                         </div>
                     </div>
-
                 </div>
                 <div class="row">
                     <div class="col-md-12">
