update app.py tableau.html route

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,11 +84,9 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
 					  <li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">dashboard <span class="caret"></span></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-						 <li><a href="tableau.html">dashboard</a></li>
-						 <li><a href="tableau.html">works cited</a></li>
-						 <li><a href="tableau.html">data</a></li>
+						 <li><a href="tableau.html">tableau</a></li>
 
 		
 				
