--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
 					  <li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-						 <li><a href="tableau.html">tableau</a></li>
+						 <li><a href="tableau">tableau</a></li>
 
 		
 				
