updated index link

--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -63,7 +63,7 @@
 					<!-- /responsive nav button -->
 					
 					<!-- logo -->
-                    <a class="navbar-right navbar-btn" href="./index.html">home</a>
+                    <a class="navbar-right navbar-btn" href="./">home</a>
                     
 					<!-- /logo -->
                 </div>
