--- a/templates/index.html
+++ b/templates/index.html
@@ -207,9 +207,9 @@
 		  <div class="form-group">
 	
 		  <div class="form-group">
-			<label for="gender1" class="col-sm-4 control-label">Critic Score:</label>
+			<label for="critic-score" class="col-sm-4 control-label">Critic Score:</label>
 			<div class="col-sm-4">
-			<select class="form-control inputstl" id="gender1">
+			<select class="form-control inputstl" id="critic-score">
 			  <option>example</option>
 			  <option>example</option>
 			</select>          
@@ -217,44 +217,52 @@
 			</div>
 		  </div>      
 		  <div class="form-group">
-			<label for="gender1" class="col-sm-4 control-label">ESRB Rating:</label>
+			<label for="ESRB" class="col-sm-4 control-label">ESRB Rating:</label>
 			<div class="col-sm-4">
-			<select class="form-control inputstl" id="gender1">
+			<select class="form-control inputstl" id="ESRB">
 			  <option>example</option>
 			  <option>example</option>
 			</select>   
 		  </div>
 		  </div>
 		  <div class="form-group">
-			<label for="gender1" class="col-sm-4 control-label">Genre:</label>
+			<label for="genre" class="col-sm-4 control-label">Genre:</label>
 			<div class="col-sm-4">
-			<select class="form-control inputstl" id="gender1">
+			<select class="form-control inputstl" id="genre">
 			  <option>example</option>
 			  <option>example</option>
 			</select>   
 		  </div>
 		  </div>
 		  <div class="form-group">
-			<label for="gender1" class="col-sm-4 control-label">Platform:</label>
+			<label for="console" class="col-sm-4 control-label">Console:</label>
 			<div class="col-sm-4">
-			<select class="form-control inputstl" id="gender1">
+			<select class="form-control inputstl" id="console">
+			  <option>3DS</option>
+			  <option>DC</option>
+			  <option>DS</option>
+			  <option>Gameboy</option>
+			  <option>Gameboy Advance</option>
+			  <option>Gameboy Color</option>
+			  <option>GC</option>
+			  <option>N64</option>
 			  <option>example</option>
-			  <option>example</option>
+
 			</select>   
 		  </div>
 		  </div>   <div class="form-group">
-			<label for="gender1" class="col-sm-4 control-label">Publisher:</label>
+			<label for="publisher" class="col-sm-4 control-label">Publisher:</label>
 			<div class="col-sm-4">
-			<select class="form-control inputstl" id="gender1">
+			<select class="form-control inputstl" id="publisher">
 			  <option>example</option>
 			  <option>example</option>
 			</select>   
 		  </div>
 		  </div>
 	   <div class="form-group">
-			  <label for="gender1" class="col-sm-4 control-label">Year:</label>
+			  <label for="year" class="col-sm-4 control-label">Year:</label>
 			  <div class="col-sm-4">
-			  <select class="form-control inputstl" id="gender1">
+			  <select class="form-control inputstl" id="year">
 				<option>example</option>
 				<option>example</option>
 			  </select>   
