updated index and added generator html

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,7 @@
                     <ul id="nav" class="nav navbar-nav">
                         <li class="current"><a href="#body">home</a></li>
                         <li><a href="#background">background</a></li>
+						<li><a href="generator.html">Video Game Generator</a></li>
 
                     </ul>
 					</nav>
@@ -84,9 +85,9 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
 					  <li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau<span class="caret"></span></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-						 <li><a href="tableau.html">tableau</a></li>
+						 <li><a href="tableau.html">Tableau</a></li>
 
 		
 				
@@ -207,12 +208,12 @@
 		  <div class="form-group">
 	
 		  <div class="form-group">
-			<label for="critic-score" class="col-sm-4 control-label">Critic Score:</label>
+			<!-- <label for="critic-score" class="col-sm-4 control-label">Critic Score:</label>
 			<div class="col-sm-4">
 			<select class="form-control inputstl" id="critic-score">
 			  <option>example</option>
 			  <option>example</option>
-			</select>          
+			</select>           -->
 			  
 			</div>
 		  </div>      
@@ -220,8 +221,10 @@
 			<label for="ESRB" class="col-sm-4 control-label">ESRB Rating:</label>
 			<div class="col-sm-4">
 			<select class="form-control inputstl" id="ESRB">
-			  <option>example</option>
-			  <option>example</option>
+			  <option>E</option>
+			  <option>E10</option>
+			  <option>M</option>
+			  <option>T</option>
 			</select>   
 		  </div>
 		  </div>
@@ -229,8 +232,24 @@
 			<label for="genre" class="col-sm-4 control-label">Genre:</label>
 			<div class="col-sm-4">
 			<select class="form-control inputstl" id="genre">
-			  <option>example</option>
-			  <option>example</option>
+			  <option>Action</option>
+			  <option>Action-Adventure</option>
+			  <option>Adventure</option>
+			  <option>Board Games</option>
+			  <option>Fighting</option>
+			  <option>Misc.</option>
+			  <option>MMO</option>
+			  <option>Music</option>
+			  <option>Party</option>
+			  <option>Platform</option>
+			  <option>Puzzle</option>
+			  <option>Racing</option>
+			  <option>Role-Playing</option>
+			  <option>Sandbox</option>
+			  <option>Shooter</option>
+			  <option>Simulation</option>
+			  <option>Sports</option>
+			  <option>Strategy</option>
 			</select>   
 		  </div>
 		  </div>
@@ -238,15 +257,27 @@
 			<label for="console" class="col-sm-4 control-label">Console:</label>
 			<div class="col-sm-4">
 			<select class="form-control inputstl" id="console">
-			  <option>3DS</option>
-			  <option>DC</option>
-			  <option>DS</option>
+			  <option>Nintendo 3DS</option>
+			  <option>Dreamcast (DC)</option>
+			  <option>Nintendo DS</option>
 			  <option>Gameboy</option>
 			  <option>Gameboy Advance</option>
 			  <option>Gameboy Color</option>
-			  <option>GC</option>
-			  <option>N64</option>
-			  <option>example</option>
+			  <option>Gamecube</option>
+			  <option>Nintendo 64</option>
+			  <option>Nintendo Switch</option>
+			  <option>Playstation 1</option>
+			  <option>Playstation 2</option>
+			  <option>Playstation 3</option>
+			  <option>Playstation 4</option>
+			  <option>PlayStation Portable (PSN)</option>
+			  <option>PlayStation Vita (PSV)</option>
+			  <option>Sega Saturn (SAT)</option>
+			  <option>Wii</option>
+			  <option>WiiU</option>
+			  <option>Xbox 360</option>
+			  <option>Xbox</option>
+			  <option>Xbox One</option>
 
 			</select>   
 		  </div>
@@ -263,8 +294,32 @@
 			  <label for="year" class="col-sm-4 control-label">Year:</label>
 			  <div class="col-sm-4">
 			  <select class="form-control inputstl" id="year">
-				<option>example</option>
-				<option>example</option>
+				<option>1995</option>
+				<option>1996</option>
+				<option>1996</option>
+				<option>1997</option>
+				<option>1998</option>
+				<option>1999</option>
+				<option>2000</option>
+				<option>2001</option>
+				<option>2002</option>
+				<option>2003</option>
+				<option>2004</option>
+				<option>2005</option>
+				<option>2006</option>
+				<option>2007</option>
+				<option>2008</option>
+				<option>2009</option>
+				<option>2010</option>
+				<option>2011</option>
+				<option>2012</option>
+				<option>2013</option>
+				<option>2014</option>
+				<option>2015</option>
+				<option>2016</option>
+				<option>2017</option>
+				<option>2018</option>
+
 			  </select>   
 			  <br> </br>
 		  
