added publishers to dropdowns

--- a/templates/index.html
+++ b/templates/index.html
@@ -280,16 +280,99 @@
 			  <option>Xbox One</option>
 
 			</select>   
-		  </div>
-		  </div>   <div class="form-group">
-			<label for="publisher" class="col-sm-4 control-label">Publisher:</label>
-			<div class="col-sm-4">
-			<select class="form-control inputstl" id="publisher">
-			  <option>example</option>
-			  <option>example</option>
+		</div>
+		</div>   <div class="form-group">
+		  <label for="publisher" class="col-sm-4 control-label">Publisher:</label>
+		  <div class="col-sm-4">
+		  <select class="form-control inputstl" id="publisher">
+			<option>2K Games</option>
+			<option>2K Sports</option>
+			<option>2K Sports</option>
+			<option>505 Games</option>
+			<option>989 Studios</option>
+			<option>2K Sports</option>
+			<option>Acclaim Entertainment</option>
+			<option>Activision</option>
+			<option>2K Sports</option>
+			<option>Agetec</option>
+			<option>Askys Games</option>
+			<option>AQ Interactive</option>
+			<option>Arc System Works</option>
+			<option>ASCII Entertainment</option>
+			<option>Atari</option>
+			<option>Atlus</option>
+			<option>Bandai</option>
+			<option>Bandai Namco Entertainment</option>
+			<option>Bandai Namco Entertainment</option>
+			<option>Capcom</option>
+			<option>Blizzard Entertainment</option>
+			<option>CDV Software Entertainment</option>
+			<option>City Interactive</option>
+			<option>Codemasters</option>
+			<option>D3 Publisher</option>
+			<option>Deep Silver</option>
+			<option>Disney Interactive Studios</option>
+			<option>EA Sports</option>
+			<option>Eidos Interactive</option>
+			<option>Electronic Arts</option>
+			<option>Enix</option>
+			<option>Global Star Software</option>
+			<option>GT Interactive</option>
+			<option>Hello Games</option>
+			<option>Hudson Soft</option>
+			<option>Ignition Entertainment</option>
+			<option>JoWood Productions</option>
+			<option>Hudson Soft</option>
+			<option>Kalypso</option>
+			<option>KOEI</option>
+			<option>Koei Tecmo</option>
+			<option>Konami</option>
+			<option>Konami Digital Entertainment</option>
+			<option>LucasArts</option>
+			<option>Marvelous Interactive</option>
+			<option>Maxis</option>
+			<option>Microsoft</option>
+			<option>Microsoft Game Studios</option>
+			<option>Midway Games</option>
+			<option>Mojang</option>
+			<option>Namco</option></option>
+			<option>Namco Bandai</option>
+			<option>Namco Bandai Games</option>
+			<option>Natsume</option>
+			<option>Nintendo</option>
+			<option>Nippon Ichi Software</option>
+			<option>NIS America</option>
+			<option>Ocean</option>
+			<option>Publisher</option>
+			<option>RedOctane</option>
+			<option>Rockstar Games</option>
+			<option>Sega</option>
+			<option>Sony Computer Entertainment</option>
+			<option>Sony Computer Entertainment America</option>
+			<option>Sony Interactive Entertainment</option>
+			<option>Sony Online Entertainment</option>
+			<option>SouthPeak Interactive</option>
+			<option>Square</option>
+			<option>Square EA</option>
+			<option>Square Enix</option>
+			<option>Taito</option></option>
+			<option>Take-Two Interactive</option>
+			<option>Tecmo</option>
+			<option>THQ</option></option>
+			<option>Touchstone</option>
+			<option>Ubisoft</option></option>
+			<option>Universal Interactive</option>
+			<option>Valve</option></option>
+			<option>Valve Corporation</option>
+			<option>Warner Bros. Interactive</option>
+			<option>Warner Bros. Interactive Entertainment</option>
+			<option>Working Designs</option>
+			<option>Xseed Games</option>
+			<option>Xseed Games</option>
+			<option>Xseed Games</option>
 			</select>   
-		  </div>
-		  </div>
+		</div>
+		</div>
 	   <div class="form-group">
 			  <label for="year" class="col-sm-4 control-label">Year:</label>
 			  <div class="col-sm-4">
