--- a/templates/index.html
+++ b/templates/index.html
@@ -74,9 +74,8 @@
 				<!-- main page NAVIGATION -->
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
-                        <li class="current"><a href="#body">home</a></li>
-                        <li><a href="#background">background</a></li>
-						<li><a href="generator.html">Video Game Generator</a></li>
+                        <li class="current"><a href="index.html">Home</a></li>
+                        <li><a href="#background">Background</a></li>
 
                     </ul>
 					</nav>
@@ -88,6 +87,7 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 						 <li><a href="tableau.html">Tableau</a></li>
+						 <li><a href="generator.html">Generator</a></li>
 
 		
 				
@@ -106,7 +106,7 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					
-					<div class="item active" style="background-image:url('/static/img/banner.jpg');">
+					<div class="item active" style="background-image:url('/static/img/blackpurp_banner.jpg');">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Videogame<span> Recommender</span>!</h2>
 							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/find</span> your next game.</h3>				
