add input field /dropdown for titles; updated index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -406,19 +406,57 @@
 		  
 			</div>
 		  </div>  
+		  
+		  <div class="form-group">
+			<label for="Title" class="col-sm-4 control-label">Game Title</label>
+		  <form autocomplete="off" action="/action_page.php">
+			<div class="col-sm-4 form-group ">
+			<div class="autocomplete col-sm-4" style="width:300px;">
+			  <input id="myInput" type="text" name="gameTitles" placeholder="start typing...">
+			</div>
+		  </form>
+		  
+		 
+	<br> 
+	</br>
+	<br> 
+	</br>
+
 		  <div class="form-group">
 			<div class="col-sm-offset-2 col-sm-4">
-			  <button type="submit" class="btn btn-lg btn-block btn-dark">Get Recommendations</button>
+			  <button type="submit" class="btn btn-lg btn-block">Get Recommendation</button>
 			</div>
 		  </div>
 		</form>
 	   </div> 
 	   <br> </br>
+	
 	<!--
 	End Recommendor section
 	==================================== -->
+		
+	
+	
+	</section>
+	
+	
+	
+	<!--
+	TESTING SECTION
+	==================================== -->
 	
 
+<!--Make sure the form has the autocomplete function switched off:-->
+
+	
+	
+	<!--
+       	END TESTING SECTION
+        ==================================== -->	
+
+		
+		
+		
 		
 		<!--
         Video Game Stats (Embed Tableau?)
@@ -497,8 +535,22 @@
             </div>
         </footer>
 		
+				<!-- dropdown js script
+		================================================== -->
+		
+		<script src="bootstrap-autocomplete.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
+		<script src="/static/js/titles.js"></script>
+		
+		
 		<!-- Essential jQuery Plugins
 		================================================== -->
+		<script src="bootstrap-autocomplete.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
+		<script src="/static/js/logic.js"></script>
+		
+
+
 		<!-- Main jQuery -->
         <script src="/static/js/jquery-1.11.1.min.js"></script>
 		<!-- Single Page Nav -->
