--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
 				<!-- main page NAVIGATION -->
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
-                        <li class="current"><a href="index.html">Home</a></li>
+                        <li class="current"><a href="./index.html">Home</a></li>
                         <li><a href="#background">Background</a></li>
 
                     </ul>
@@ -86,8 +86,8 @@
 					  <li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-						 <li><a href="tableau.html">Tableau</a></li>
-						 <li><a href="generator.html">Generator</a></li>
+						 <li><a href="./tableau">Tableau</a></li>
+						 <li><a href="./generator">Generator</a></li>
 
 		
 				
