--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -74,7 +74,7 @@
                 <!-- /responsive nav button -->
 
                 <!-- logo -->
-                <a class="navbar-brand" href="#body">
+                <a class="navbar-brand" href="./">
                     <h1 id="logo">
                         <img src="/static/img/logo7.png" alt="banner2">
                     </h1>
@@ -85,8 +85,8 @@
             <!-- main page NAVIGATION -->
             <nav class="collapse navbar-collapse navbar-right" role="navigation">
                 <ul id="nav" class="nav navbar-nav">
-                    <li class="current"><a href="#body">Home</a></li>
-                    <li><a href="#background">Background</a></li>
+                    <li class="current"><a href="./">Home</a></li>
+                    <li><a href="./index.html#background">Background</a></li>
                 </ul>
             </nav>
 
@@ -97,8 +97,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                             aria-expanded="false">Dropdown<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="tableau.html">Tableau</a></li>
-                            <li><a href="generator.html">Generator</a></li>
+                            <li><a href="./tableau">Tableau</a></li>
+                            <li><a href="./generator">Generator</a></li>
 
 
 
@@ -196,7 +196,7 @@
                     <!-- /responsive nav button -->
 
                     <!-- logo -->
-                    <a class="navbar-right navbar-btn" href="index.html">home</a>
+                    <a class="navbar-right navbar-btn" href="./index.html">home</a>
 
                     <!-- /logo -->
                 </div>
