add data page to dropwdown and flask app

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<!-- Google Font -->
-		
+	
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 		<!-- CSS
@@ -88,6 +88,7 @@
 						<ul class="dropdown-menu">
 						 <li><a href="./tableau">Tableau</a></li>
 						 <li><a href="./generator">Generator</a></li>
+						 <li><a href="./data">Data</a></li>
 
 		
 				
@@ -95,7 +96,7 @@
         <!--
         End Fixed Navigation
         ==================================== -->
-		
+	
         <!--
         Home 
         ==================================== -->
@@ -416,7 +417,6 @@
 			</div>
 		  </form>
 		  
-		 
 	<br> 
 	</br>
 	<br> 
@@ -434,12 +434,10 @@
 	<!--
 	End Recommendor section
 	==================================== -->
-		
-	
+
 	
 	</section>
-	
-	
+
 	
 	<!--
 	TESTING SECTION
@@ -449,15 +447,12 @@
 <!--Make sure the form has the autocomplete function switched off:-->
 
 	
-	
+
 	<!--
        	END TESTING SECTION
         ==================================== -->	
 
-		
-		
-		
-		
+	
 		<!--
         Video Game Stats (Embed Tableau?)
         ==================================== -->		
@@ -534,7 +529,7 @@
                 </div>
             </div>
         </footer>
-		
+	
 				<!-- dropdown js script
 		================================================== -->
 		
@@ -549,8 +544,6 @@
 		<script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
 		<script src="/static/js/logic.js"></script>
 		
-
-
 		<!-- Main jQuery -->
         <script src="/static/js/jquery-1.11.1.min.js"></script>
 		<!-- Single Page Nav -->
