--- a/templates/index.html
+++ b/templates/index.html
@@ -197,7 +197,7 @@
         <!--
         Recommendor Section
         ==================================== -->
-	<br></br>
+<!-- 	<br></br>
 	<section id="model" class="model">	
 <img src="/static/img/viz1.png" alt="viz1" class="center-block">
 
@@ -209,14 +209,14 @@
 		  <div class="form-group">
 	
 		  <div class="form-group">
-			<!-- <label for="critic-score" class="col-sm-4 control-label">Critic Score:</label>
+			<label for="critic-score" class="col-sm-4 control-label">Critic Score:</label>
 			<div class="col-sm-4">
 			<select class="form-control inputstl" id="critic-score">
 			  <option>example</option>
 			  <option>example</option>
 			</select>           -->
 			  
-			</div>
+<!-- 			</div>
 		  </div>      
 		  <div class="form-group">
 			<label for="ESRB" class="col-sm-4 control-label">ESRB Rating:</label>
@@ -429,7 +429,7 @@
 		  </div>
 		</form>
 	   </div> 
-	   <br> </br>
+	   <br> </br> --> -->
 	
 	<!--
 	End Recommendor section
