added form reset code in rec

--- a/templates/generator.html
+++ b/templates/generator.html
@@ -103,7 +103,7 @@
 				</section>
 				<section id="model" class="model col-lg-6 col-md-6">
 					<div class="card">
-					<form class="form-horizontal" autocomplete="off" role="form">
+					<form class="form-horizontal" id="userForms" autocomplete="off" role="form">
 					   <div class="form-group">
 					   <label for="Title" class="col-sm-4 control-label">Game Title</label>
 					   <div class="col-sm-4">
@@ -126,7 +126,7 @@
 				 </section>
 			   <section id="model" class="model col-lg-6 col-md-6">
 				<div class="card">
-				   <form class="form-horizontal" autocomplete="off" role="form">
+				   <form class="form-horizontal" id="userForms" autocomplete="off" role="form">
 					  <div class="form-group">
 							<label for="critic-score" class="col-sm-4 control-label">Critic Score:</label>
 							   <div class="col-sm-4">
