index.html edit description

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 		<!-- Page Title -->
         <title>Find a Videogame</title>		
 		<!-- Meta Description -->
-        <meta name="description" content="Blue One Page Creative HTML5 Template">
+        <meta name="description" content="Find a Videogame">
         <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
         <meta name="author" content="Muhammad Morshed">
 		<!-- Mobile Specific Meta -->
