updated tableau and table page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -482,7 +482,7 @@ Some fun facts
 ==========================================*/
 
 #facts {
-background-image: url("../img/parallax/city.jpg");
+background-image: url("../img/retro\ controllers.jpg");
 background-color: rgba(6,32,51,.8);
 background-attachment: fixed !important;
 background-position: center center;
