--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -215,6 +215,24 @@
        Begin Tableau
         ==================================== -->
         <section>
+            <style>
+
+                #ABC {
+                  background-color: #050212;
+                  height: 100%;
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                }
+            
+                body{
+                  background: #050212;
+                  margin: 0;
+                } 
+                
+            
+                </style>
             <div class='tableauPlaceholder container-fluid' id='viz1638934941523' style='position: center'><noscript><a
                         href='#'><img alt='Dashboard 2 '
                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;proj4-starter_16389253976760&#47;Dashboard2&#47;1_rss.png'
@@ -236,7 +254,13 @@
                     <param name='filter' value='publish=yes' />
                 </object></div>
             <script
-                type='text/javascript'>                    var divElement = document.getElementById('viz1638934941523'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1300px'; vizElement.style.height = '1427px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1300px'; vizElement.style.height = '1427px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '2177px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+                type='text/javascript'>                    
+                var divElement = document.getElementById('viz1638934941523'); 
+                var vizElement = divElement.getElementsByTagName('object')[0]; 
+                if (divElement.offsetWidth > 800) { vizElement.style.width = '1320px'; vizElement.style.height = '1427px'; } 
+                else if (divElement.offsetWidth > 500) { vizElement.style.width = '1320px'; vizElement.style.height = '1427px'; } 
+                else { vizElement.style.width = '100%'; vizElement.style.height = '2177px'; } var scriptElement = document.createElement('script'); 
+                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </section>
         <!--
         End Tableau
