add data pg to dropdown in generator.html

--- a/templates/generator.html
+++ b/templates/generator.html
@@ -88,6 +88,7 @@
                      <ul class="dropdown-menu">
 						<li><a href="./tableau">Tableau</a></li>
 						<li class="current"><a href="./generator">Generator</a></li>
+						<li><a href="./data">Data</a></li>
 				  	 </ul>
                </header>
                <!--
