--- a/templates/generator.html
+++ b/templates/generator.html
@@ -68,7 +68,7 @@
                      <!-- logo -->
                      <a class="navbar-brand" href="#body">
                         <h1 id="logo">
-                           <img src="/static/img/logo7.png" alt="banner2">
+                           <img src="/" alt="">
                         </h1>
                      </a>
                      <!-- /logo -->
@@ -90,6 +90,26 @@
 						<li class="current"><a href="./generator">Generator</a></li>
 				  	 </ul>
                </header>
+
+			   <style>
+
+				#ABC {
+				  background-color: #050212;
+				  height: 100%;
+				  position: absolute;
+				  top: 0;
+				  left: 0;
+				  width: 100%;
+				}
+			
+				body{
+				  background: #050212;
+				  margin: 0;
+	
+				} 
+				
+			
+				</style>
                <!--
                   End Fixed Navigation
                   ==================================== -->
@@ -99,7 +119,7 @@
                <br></br>
                <section id="model" class="model col-lg-12">
 				   <br></br>
-				<h1>Video Game Recommendor</h1>
+				<h1><p style="text-align:center">Video Game Recommendor</p></h1>
 				</section>
 				<section id="model" class="model col-lg-6 col-md-6">
 					<div class="card">
