--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 					<!-- logo -->
                     <a class="navbar-brand" href="#body">
 						<h1 id="logo">
-							<img src="/static/img/logo7.png" alt="banner2">
+							<img src="" alt="">
 						</h1>
 					</a>
 					<!-- /logo -->
@@ -107,7 +107,7 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					
-					<div class="item active" style="background-image:url('/static/img/blackpurp_banner.jpg');">
+					<div class="item active" style="background-image:url('/static/img/blackpurp_banner.jpg')">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Videogame<span> Recommender</span>!</h2>
 							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/find</span> your next game.</h3>				
@@ -129,10 +129,11 @@
         <!--
        About the Project/Background
         ==================================== -->
-		
+		<style></style>
 		<section id="background" class="background">
 			<div class="container">
 				<div class="row">
+					
 				
 					<div class="sec-title text-center mb50 wow bounceInDown animated" data-wow-duration="500ms">
 						<h2>Project Background</h2>
