--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -76,7 +76,7 @@
                 <!-- logo -->
                 <a class="navbar-brand" href="./">
                     <h1 id="logo">
-                        <img src="/static/img/logo7.png" alt="banner2">
+                        <img src="" alt="">
                     </h1>
                 </a>
                 <!-- /logo -->
