changed stats to white color

--- a/templates/index.html
+++ b/templates/index.html
@@ -464,7 +464,7 @@
 					<div class="row number-counters">
 						
 						<div class="sec-title text-center mb50 wow rubberBand animated" data-wow-duration="1000ms">
-							<h2>Stats on Video Games</h2>
+							<h2 class="white-text" style="color: white;">Stats on Video Games</h2>
 							<div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
 						</div>
 						
