changed data to directory and added to all pages

--- a/templates/generator.html
+++ b/templates/generator.html
@@ -86,8 +86,8 @@
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown<span class="caret"></span></a>
                      <ul class="dropdown-menu">
 						<li><a href="./tableau">Tableau</a></li>
-						<li class="current"><a href="./generator">Generator</a></li>
-						<li><a href="./data">Data</a></li>
+						<li><a href="./generator">Generator</a></li>
+						<li><a href="./directory">Directory</a></li>
 				  	 </ul>
                </header>
 
