--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
 						<ul class="dropdown-menu">
 						 <li><a href="./tableau">Tableau</a></li>
 						 <li><a href="./generator">Generator</a></li>
-						 <li><a href="./data">Data</a></li>
+						 <li><a href="./directory">Directory</a></li>
 
 		
 				
