changes to html pages and changed color on generator

--- a/templates/generator.html
+++ b/templates/generator.html
@@ -86,7 +86,7 @@
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown<span class="caret"></span></a>
                      <ul class="dropdown-menu">
 						<li><a href="./tableau">Tableau</a></li>
-						<li><a href="./generator">Generator</a></li>
+						<li><a href="./generator">Recommendor</a></li>
 						<li><a href="./directory">Directory</a></li>
 				  	 </ul>
                </header>
@@ -94,7 +94,7 @@
 			   <style>
 
 				#ABC {
-				  background-color: #050212;
+				  background-color: #0a0525;
 				  height: 100%;
 				  position: absolute;
 				  top: 0;
@@ -103,7 +103,7 @@
 				}
 			
 				body{
-				  background: #050212;
+				  background: #0a0525;
 				  margin: 0;
 	
 				} 
@@ -119,13 +119,13 @@
                <br></br>
                <section id="model" class="model col-lg-12">
 				   <br></br>
-				<h1><p style="text-align:center">Video Game Recommendor</p></h1>
+				<h1 class="white-text" style="color: white; text-align:center">Video Game Recommendor</h1>
 				</section>
 				<section id="model" class="model col-lg-6 col-md-6">
 					<div class="card">
 					<form class="form-horizontal" id="userForms" autocomplete="off" role="form">
 					   <div class="form-group">
-					   <label for="Title" class="col-sm-4 control-label">Game Title</label>
+					   <label for="Title" class="col-sm-4 control-label" style= "color: white">Game Title</label>
 					   <div class="col-sm-4">
 						  <div class="autocomplete col-sm-4" style="width:100%">
 							 <input id="game" type="text" name="gameTitles" placeholder="start typing...">
@@ -134,7 +134,7 @@
 						  <br></br>
 						  <div class="form-group">
 							 <div class="col-sm-offset-2 col-sm-4">
-								<button style="width: auto !important;" type="button" class="btn btn-lg btn-block" id="gameSubmit">Get Recommendation</button>
+								<button style="width: auto !important;" type="button" class="btn btn-lg btn-block" style= "color: white" id="gameSubmit">Get Recommendation</button>
 							 </div>
 						  </div>
 					</form>
@@ -148,7 +148,7 @@
 				<div class="card">
 				   <form class="form-horizontal" id="userForms" autocomplete="off" role="form">
 					  <div class="form-group">
-							<label for="critic-score" class="col-sm-4 control-label">Critic Score:</label>
+							<label for="critic-score" class="col-sm-4 control-label" style= "color: white">Critic Score:</label>
 							   <div class="col-sm-4">
 								<input id="score" type="number" placeholder="enter minimum score...">      
 						 </div>
@@ -190,7 +190,7 @@
 						 </div>
 					  </div> -->
 					  <div class="form-group">
-						 <label for="console" class="col-sm-4 control-label">Console:</label>
+						 <label for="console" class="col-sm-4 control-label" style= "color: white">Console:</label>
 						 <div class="col-sm-4">
 							<select class="form-control inputstl" id="platform">
 							   <option value="3DS">Nintendo 3DS</option>
