--- a/templates/table.html
+++ b/templates/table.html
@@ -98,7 +98,7 @@
                             aria-expanded="false">Dropdown<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="./tableau">Tableau</a></li>
-                            <li><a href="./generator">Generator</a></li>
+                            <li><a href="./generator">Recommendor</a></li>
                             <li><a href="./directory">Directory</a></li>
 
 
