--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 						 <li><a href="./tableau">Tableau</a></li>
-						 <li><a href="./generator">Generator</a></li>
+						 <li><a href="./generator">Recommendor</a></li>
 						 <li><a href="./directory">Directory</a></li>
 
 		
