--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
 				<!-- main page NAVIGATION -->
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
-                        <li class="current"><a href="./index.html">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#background">Background</a></li>
 
                     </ul>
