--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -85,7 +85,7 @@
             <!-- main page NAVIGATION -->
             <nav class="collapse navbar-collapse navbar-right" role="navigation">
                 <ul id="nav" class="nav navbar-nav">
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="./index.html#background">Background</a></li>
                 </ul>
             </nav>
