--- a/templates/generator.html
+++ b/templates/generator.html
@@ -76,7 +76,7 @@
                   <!-- main page NAVIGATION -->
                   <nav class="collapse navbar-collapse navbar-right" role="navigation">
                      <ul id="nav" class="nav navbar-nav">
-                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                      </ul>
                   </nav>
                   <!-- /main nav -->
