--- a/templates/index.html
+++ b/templates/index.html
@@ -72,9 +72,9 @@
                 </div>
 
 				<!-- main page NAVIGATION -->
-                <nav class="collapse navbar-collapse navbar-right" role="navigation">
-                    <ul id="nav" class="nav navbar-nav">
-                        <li><a href="./index.html">Home</a></li>
+				<nav class="collapse navbar-collapse navbar-right" role="navigation">
+					<ul id="nav" class="nav navbar-nav">
+					   <li><a href="/">Home</a></li>
                         <li><a href="#background">Background</a></li>
 
                     </ul>
