--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,10 @@
 							
 							<div class="service-desc">
 								<h3>Data Sourcing and Cleanup</h3>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+								<p>Our group used a Kaggle dataset which contains over 55,000 records of video games and their scores and sales. Once this was loaded into Jupyter notebook the preprocessing and data cleanup started to get the data ready for the machine learning function. This included dropping columns that were unrelated and data that was either empty or contained null values. 
+
+									Kaggle url: 
+									</p>
 							</div>
 						</div>
 					</div>
