--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -235,8 +235,8 @@
                 </style>
             <div class='tableauPlaceholder container-fluid' id='viz1638934941523' style='position: center'><noscript><a
                         href='#'><img alt='Dashboard 2 '
-                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;proj4-starter_16389253976760&#47;Dashboard2&#47;1_rss.png'
-                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;proj4-starter_16389253976760&#47;Dashboard2&#47;1_rss.png' 
+                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none'; crossorigin="anonymous">
                     <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                     <param name='embed_code_version' value='3' />
                     <param name='site_root' value='' />
