--- a/templates/table.html
+++ b/templates/table.html
@@ -246,7 +246,8 @@
           else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1320px';vizElement.style.height='1427px';} 
           else { vizElement.style.width='100%';vizElement.style.height='2177pxpx';}                     
           var scriptElement = document.createElement('script');                    
-          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+          scriptElement.crossorigin="anonymous";                    
           vizElement.parentNode.insertBefore(scriptElement, vizElement);                
           </script>
         <!--
