rmv autocomplete jquery from navbar index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -537,7 +537,7 @@
 				<!-- dropdown js script
 		================================================== -->
 	
-		<!-- Essential jQuery Plugins
+		<!-- Essential jQuery Plugin
 		================================================== -->
 		
 		<!-- Main jQuery -->
