--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -5,13 +5,6 @@
 <!--[if gt IE 8]><!-->
 <html lang="en" class="no-js">
 <!--<![endif]-->
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html lang="en" class="no-js">
-<!--<![endif]-->
 
 <head>
     <!-- meta charec set -->
@@ -85,7 +78,7 @@
             <!-- main page NAVIGATION -->
                   <nav class="collapse navbar-collapse navbar-right" role="navigation">
                      <ul id="nav" class="nav navbar-nav">
-                        <li><a href="./index">Home</a></li>
+                        <li><a id="homebutton" href="./index">Home</a></li>
                 </ul>
             </nav>
 
@@ -134,48 +127,6 @@
         </div>
     </section>
 
-    <head>
-        <!-- meta charec set -->
-        <meta charset="utf-8">
-        <!-- Always force latest IE rendering engine or request Chrome Frame -->
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <!-- Page Title -->
-        <title>Find a Videogame</title>
-        <!-- Meta Description -->
-        <meta name="description" content="Blue One Page Creative HTML5 Template">
-        <meta name="keywords"
-            content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
-        <meta name="author" content="Muhammad Morshed">
-        <!-- Mobile Specific Meta -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Google Font -->
-
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet'
-            type='text/css'>
-
-        <!-- CSS
-		================================================== -->
-        <!-- Fontawesome Icon font -->
-        <link rel="stylesheet" href="/static/css/font-awesome.min.css">
-        <!-- Twitter Bootstrap css -->
-        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <!-- jquery.fancybox  -->
-        <link rel="stylesheet" href="/static/css/jquery.fancybox.css">
-        <!-- animate -->
-        <link rel="stylesheet" href="/static/css/animate.css">
-        <!-- Main Stylesheet -->
-        <link rel="stylesheet" href="/static/css/main.css">
-        <!-- media-queries -->
-        <link rel="stylesheet" href="/static/css/media-queries.css">
-
-        <!-- Modernizer Script for old Browsers -->
-        <script src="/static/js/modernizr-2.6.2.min.js"></script>
-
-    </head>
-
-    <body id="body">
-
         <!-- preloader -->
         <div id="preloader">
             <img src="/static/img/preloader.gif" alt="Preloader">
@@ -185,28 +136,28 @@
         <!-- 
         Fixed Navigation
         ==================================== -->
-        <header id="navigation" class="navbar">
+        <!-- <header id="navigation" class="navbar">
             <div class="container">
                 <div class="navbar-header navbar-right">
                     <!-- responsive nav button -->
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="navbar-brand">Toggle navigation</span>
                         <i class="fa fa-bars fa-2x"></i>
-                    </button>
+                    </button> -->
                     <!-- /responsive nav button -->
 
                     <!-- logo -->
-                    <a class="navbar-right navbar-btn" href="./index.html">home</a>
+                    <!-- <a class="navbar-right navbar-btn" href="./index.html">home</a> -->
 
                     <!-- /logo -->
-                </div>
+                <!-- </div> -->
 
 
                 <!-- /main nav -->
 
-            </div>
-        </header>
-        <br></br>
+            <!-- </div> -->
+        <!-- </header> --> -->
+        <!-- <br></br> -->
         <!--
         End Fixed Navigation
         ==================================== -->
@@ -339,6 +290,17 @@
         <!-- Custom Functions -->
         <script src="/static/js/custom.js"></script>
 
+
+        <script>
+            $(document).ready(function() {
+                
+                $("li").click(function() {
+                    $("a")[0].click();
+                });                            
+            });
+
+        </script>
+
         <script type="/static/text/javascript">
 			$(function(){
 				
@@ -348,3 +310,7 @@
     </head>
 
 </html>
+
+function doThis() {
+   var x = 12;
+};
